--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -5,7 +5,9 @@
   padding: 2rem 1rem;
   text-align: center;
   font-family: var(--font-body);
-  margin: 0;                  
+  margin: 0;  
+  width: 100%;     
+  font-size: 1.5rem;            
 }
 
 .footer a {
@@ -20,6 +22,7 @@
 
 .footer-content p {
   margin: 0.5rem 0;
+  font-size: 1.6rem;
 }
 
 .footer-copy {
